client/css/overlays/states.css
/* ... */
.variant .variant-description:empty {
  display: none;
}

.variant .variant-name {
  flex-grow: 1;
  flex-direction: column;
  align-content: flex-start;
  align-items: flex-start;
}

.variant .variant-name>div {
  line-height: 34px;
}

.variant .variant-image {
  position: relative;
  flex-grow: 0;
  flex-shrink: 0;
  height: 34px;
  width: 34px;
  margin: 1px 5px 1px 0;
  border-radius: 3px;
}
.variant img {
  height: 34px;
  width: 34px;
  border-radius: 3px;
}

.variant i {
  margin-right: 0.25rem;
}

.variant .unnamed {
  color: gray;
  font-style: italic;
}

.language-info,
.player-number-info {
  justify-content: center;
  width: auto;
  flex-grow: 0;
  flex-shrink: 1;
  padding: 0 0.75rem;
  border-left: 1px dotted lightgray;
  white-space: nowrap;
  height: 34px;
}

.player-number-info {
  min-width: 60px;
}

#variantsList [icon=add] {
  margin: 40px auto;
}


#helpTexts {
  top: calc(var(--mainDetailsHeight) + 20px);
  bottom: 10px;
  left: unset;
  right: 10px;
  width: calc(50% - 15px);
  height: unset;
  padding: 0 20px;
  overflow: auto;
  overflow-wrap: break-word;
  white-space: pre-line;
}

#helpTexts h3 {
  color: var(--VTTblue);
}

#stateScreenshot {
  width: 100%;
}

@media not all and (max-width: 957px), not all and (max-height: 600px), not all and (max-width: 1000px) and (max-height: 643px) {
  #stateDetailsOverlay #helpTexts, #stateDetailsOverlay #similarDetails {
    display: block !important;
  }
}
@media (max-width: 1260px), (max-height: 787px) {
  #stateDetailsOverlay {
    --mainDetailsHeight: 200px;
    --similarDetailsHeight: 160px;
    --arrowButtonsSize: 100px;
  }
  #mainDetails .details, #similarDetails .details {
    padding-top: 10px;
    padding-bottom: 10px;
  }
  #mainDetails > .details > div {
    display: inline-block;
    font-size: 14px;
    margin-right: 10px;
  }
  #mainDetails .material-icons {
    font-size: 18px;
    top: 3px;
  }
  #nextState .details, #prevState .details {
    display: none;
  }
}
@media (max-width: 1140px), (max-height: 712px) {
  #closeDetails {
    font-size: 0;
    padding: 5px;
  }
  #closeDetails::before {
    margin: 0;
  }
}
@media (max-width: 1040px), (max-height: 650px) {
  .variant {
    padding: .11rem .5rem;
  }
}
@media (max-width: 957px), (max-height: 600px), (max-width: 1000px) and (max-height: 643px) {
  #stateDetailsOverlay {
    --mainDetailsHeight: 150px;
    --similarDetailsHeight: 150px;
  }
  #mainDetails, #similarDetails, #variantsList, #helpTexts {
    position: unset;
    overflow: unset;
    margin: 20px auto;
    width: 95%;
    max-width: 38rem;
    height: unset;
    padding: 20px;
  }
  #mainDetails {
    margin-top: 60px;
  }
  #mainImage, #similarImage {
    position: unset;
    float: left;
    margin-right: 10px;
  }
  #mainImage img, #similarImage img, #mainImage div, #similarImage div {
    height: var(--mainDetailsHeight);
    width: var(--mainDetailsHeight);
    border-radius: 10px;
  }
  #mainDetails .details, #similarDetails .details {
    padding-top: 0;
    padding-bottom: 0;
  }
  #mainDetails .star {
    position: absolute;
  }
  #nextState, #prevState {
    display: none !important;
  }
  .variant {
    padding: .25rem .5rem;
  }
  #helpTexts {
    padding: 0 20px;
  }
}
@media (max-width: 500px), (max-height: 312px) {
  #stateDetailsOverlay {
    --mainDetailsHeight: 50px;
    --similarDetailsHeight: 50px;
  }
  #mainDetails, #similarDetails, #variantsList, #helpTexts {
    padding: 10px;
    margin: 10px auto;
  }
  #mainDetails {
    margin-top: 60px;
  }
  #mainDetails h1, #similarDetails h1 {
    margin: 8px;
    min-height: 40px;
  }
  #mainDetails .details, #similarDetails .details {
    margin: unset;
    padding: unset;
  }
  #mainDetails .star {
    font-size: 32px;
  }
  #mainImage button, #similarImage button {
    font-size: 0;
    padding: 5px;
  }
  #mainImage button::before, #similarImage button::before {
    margin: 0;
  }
  #variantsList {
    padding: 5px 0;
  }
  .variantsList {
    padding: unset;
  }
  #variantsList .variant {
    display: block;
  }
  #variantsList img {
    float: left;
  }
  #variantsList .variant > div, #variantsList .play {
    display: inline-flex;
  }
  #variantsList .variant > .variant-name {
    display: block;
    min-height: 40px;
  }
  #helpTexts {
    padding: 0 10px;
  }
}
@media (max-width: 356px), (max-height: 222px) {
  #stateDetailsOverlay > .buttons.one, #stateDetailsOverlay > .buttons.two {
    position: unset;
    display: inline-block;
    margin: 2px auto;
  }
  #mainDetails {
    margin-top: 10px;
  }
}


#stateDetailsOverlay [contenteditable=true] {
  background-image: linear-gradient(-45deg, #1112 25%, #0002 25%, #0002 50%, #1112 50%, #1112 75%, #0002 75%, #0002);
  background-size: 50px 50px;
  background-repeat: repeat
}

#stateDetailsOverlay .hidden {
  display: none !important;
}





/* updateImageOverlay */

#updateImageOverlay > h1 {
  margin-top: 0;
}

#updateImageOverlay > div:nth-child(2) {
  display: flex;
  justify-content: space-evenly;
  flex-grow: 1;
}

#updatePreviousImage, #updateCurrentImage {
  display: inline-flex;
  background: var(--roomColor);
  border-radius: 20px;
  padding: 20px;
  margin: 20px;
  flex-direction: column;
  flex-grow: 1;
}

#updateCurrentImage label {
  margin: 8px 0 2px;
  color: black;
}

#updateImageOverlay h2 {
  margin-top: 0;
  height: 40px;
}

#updateImageOverlay button[icon=upload] {
  display: inline-flex;
  float: right;
  position: relative;
  top: -3px;
  left: 4px;
}

#updateImageOverlay img {
  width: 100%;
  flex-basis: 0;
  min-height: 0;
  object-fit: contain;
  flex-grow: 1;
}

#updateButtonBar {
  display: flex;
  justify-content: space-evenly;
}


@media (max-width: 1000px), (max-height: 625px) {
  #updateImageOverlay {
    padding: 10px;
  }

  #updatePreviousImage, #updateCurrentImage {
    padding: 10px;
    margin: 10px;
  }

  #updateImageOverlay h2 {
    margin-left: 4px;
  }
}
/* ... */

